Header items alignment fix and widget display none on mobile.

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,4 @@
-.site-header {
+	.site-header {
 
 	padding: 0;
 
@@ -34,7 +34,7 @@
 
 			display: flex;
 			flex-direction: column;
-			align-items: center;
+			align-items: flex-start;
 			justify-content: space-between;
 			padding-top: 0.5rem;
 			padding-bottom: 0.5rem;
@@ -47,7 +47,7 @@
 
 				display: flex;
 				flex-direction: row;
-				align-items: center;
+				align-items: flex-start;
 				padding: 0.5rem 0;
 
 				@include breakpoint-above(lg) {
@@ -57,7 +57,6 @@
 				.site-branding-texts {
 					display: flex;
 					flex-direction: column;
-					justify-content: center;
 				}
 
 			}
@@ -65,14 +64,14 @@
 			.widget-area {
 
 				width: 100%;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
+				display: none;
 
 				@include breakpoint-above(lg) {
-					width: 50%;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
 					align-items: flex-end;
+					width: 50%;
 				}
 
 			}
